--- a/index.html
+++ b/index.html
@@ -5,13 +5,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Project</title>
+    <title>Project | 3D Team</title>
 </head>
 
 <body>
-    start
+    <div id="wrap">
+        <div id="showcase">
+            <img src="./assets/images/img01.png" alt="" class="cloud9-item">
+            <img src="./assets/images/img02.png" alt="" class="cloud9-item">
+            <img src="./assets/images/img03.png" alt="" class="cloud9-item">
+            <img src="./assets/images/img04.png" alt="" class="cloud9-item">
+            <img src="./assets/images/img05.png" alt="" class="cloud9-item">
+            <img src="./assets/images/img06.png" alt="" class="cloud9-item">
+        </div>
 
+        <p id="item-title">&nbsp;</p>
+
+        <div class="nav noselect">
+            <button class="left">
+                <i class="fa fa-arrow-left"></i>
+            </button>
+            <button class="right">
+                <i class="fa fa-arrow-right"></i>
+            </button>
+        </div>
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="./assets/js/reflection.js"></script>
+    <script src="./assets/js/jquery.cloud9carousel.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
