--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 <body>
     <div id="wrap">
         <div id="showcase">
-            <img src="./assets/images/img01.png" alt="" class="cloud9-item">
-            <img src="./assets/images/img02.png" alt="" class="cloud9-item">
-            <img src="./assets/images/img03.png" alt="" class="cloud9-item">
-            <img src="./assets/images/img04.png" alt="" class="cloud9-item">
-            <img src="./assets/images/img05.png" alt="" class="cloud9-item">
-            <img src="./assets/images/img06.png" alt="" class="cloud9-item">
+            <img src="./assets/images/img01.png" alt="01" class="cloud9-item">
+            <img src="./assets/images/img02.png" alt="02" class="cloud9-item">
+            <img src="./assets/images/img03.png" alt="03" class="cloud9-item">
+            <img src="./assets/images/img04.png" alt="04" class="cloud9-item">
+            <img src="./assets/images/img05.png" alt="05" class="cloud9-item">
+            <img src="./assets/images/img06.png" alt="06" class="cloud9-item">
         </div>
 
         <p id="item-title">&nbsp;</p>
